--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'java'
     id 'application'
     id 'checkstyle'
 }
@@ -7,21 +6,20 @@ plugins {
 group 'hexlet.code'
 version '1.0-SNAPSHOT'
 
-
-application {
-    mainClass = "hexlet.code.App"
+repositories {
+    mavenCentral()
 }
 
 compileJava {
     options.release = 17
 }
 
-run {
-    standardInput = System.in
+application {
+    mainClass = 'hexlet.code.App'
 }
 
-repositories {
-    mavenCentral()
+run {
+    standardInput = System.in
 }
 
 dependencies {
